managing proxy in MavenCache
git-svn-id: https://svn.apache.org/repos/asf/openejb/trunk/openejb@1243659 13f79535-47bb-0310-9956-ffa450edef68